fixed dark mode support

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -3,7 +3,8 @@ $content-width: 1170px;
 
 // Fonts and sizes
 $font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$primary-text-color: #000000;
+//$primary-text-color: #000000;
+$primary-text-color: var(--color-fg-default);
 
 html {
 	font-size: 62.5%;
@@ -17,7 +18,8 @@ body {
 }
 
 .subPageBody {
-	background-color: #fff;
+	//background-color: #fff;
+	background-color: $body-color;
 }
 
 h1 {
