--- a/_sass/github-markdown.scss
+++ b/_sass/github-markdown.scss
@@ -18,7 +18,7 @@ Markdown CSS adopted from https://github.com/sindresorhus/github-markdown-css
 }
 
 @media (prefers-color-scheme: dark) {
-  .markdown-body {
+  :root {
     color-scheme: dark;
     --color-prettylights-syntax-comment: #8b949e;
     --color-prettylights-syntax-constant: #79c0ff;
@@ -66,7 +66,7 @@ Markdown CSS adopted from https://github.com/sindresorhus/github-markdown-css
 }
 
 @media (prefers-color-scheme: light) {
-  .markdown-body {
+  :root {
     color-scheme: light;
     --color-prettylights-syntax-comment: #6e7781;
     --color-prettylights-syntax-constant: #0550ae;
